fix: fix homepage display on mobile and remove internal posts

--- a/app/styles/pages/content.css
+++ b/app/styles/pages/content.css
@@ -147,6 +147,12 @@
 }
 
 @media (max-width: 736px) {
+  .contact-qrcode-container {
+    display: none;
+  }
+}
+
+@media (max-width: 736px) {
   .about-section-nav {
     margin: var(--spacing-6) 0 var(--spacing-5);
     padding: var(--spacing-3);
